feat: generate dar metric summaries from collection summaries for cleaner data